Added text trunctuation

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 							<img src="{{ p.media.m }}">
 						</div>				
 						<div class="photodata">
-							<h2 class="title">{{ p.title }}</h2>
+							<div class="title">
+								<h2>{{ p.title }}</h2>
+							</div>
 							<div class="links">
 								<a href="" title="Author">{{ p.author }}</a>
 								<p>Published on 8th April 2013 at 22:00</p>
