--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<body>
 		<div id="content">	
 			<div class="container" ng-controller="MainCtrl">
-				<input id="filterPhotos" placeholder="Search for pictures..." ng-model="filterText"> 
+				<input id="filterPhotos" placeholder="Search for tags..." ng-model="filterText"> 
 				<div id="photoList">
 					<section class="photo" ng-repeat="p in pictures.items | tagFilter:filterText:items.tags">		
 						<div class="image">
@@ -21,7 +21,7 @@
 							</div>
 							<div class="links">
 								<a href="" title="Author">{{ p.author }}</a>
-								<p>Published on 8th April 2013 at 22:00</p>
+								<p>Published on {{ p.day }} {{ p.month }} {{ p.year }} at {{ p.hour }}:{{ p.minutes }}</p>
 								<a href="{{ p.link }}" title="Link to Flickr" target="_blank">View on Flickr</a>
 							</div>
 						</div>
