cleaned up some bits

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 	<head>
 			<meta charset="utf-8">
 			<meta http-equiv="X-UA-Compatible" content="IE=edge">
-			<title></title>
+			<meta name="author" content="Roel Decoene">
+			<title>Flickr photo feed</title>
 			<script src="js/require.js" data-main="js/main"></script>
 			<link rel="stylesheet" href="stylesheets/style.css">
 	</head>
